==> BG4RFF/NCKH-VNA/SourceCode/VNA_TM4C1294XL/Src/User/Src/SPI_Driver.c <==
#include "SPI_Driver.h"

void SPI_init(void)
{
    SysCtlPeripheralEnable(SYSCTL_PERIPH_SSI0);

    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOA);

    GPIOPinConfigure(GPIO_PA2_SSI0CLK);
    GPIOPinConfigure(GPIO_PA3_SSI0FSS);
    GPIOPinConfigure(GPIO_PA4_SSI0XDAT0);
    GPIOPinConfigure(GPIO_PA5_SSI0XDAT1);

    GPIOPinTypeSSI(GPIO_PORTA_BASE, GPIO_PIN_5 | GPIO_PIN_4 | GPIO_PIN_3 | GPIO_PIN_2);

    SSIConfigSetExpClk(SSI0_BASE, SysCtlClockGet(), SSI_FRF_MOTO_MODE_0,
                       SSI_MODE_MASTER, 1000000, 8);

    SSIEnable(SSI0_BASE);                       
}

void SPI_send(uint32_t data)
{
    SSIDataPut(SSI0_BASE, data); // Blocking method
}

void SPI_sendStr(char data[])
{
    uint32_t index = 0;
	
	for (;data[index] != '\0'; index++)
	{
		SPI_send((uint32_t)data[index]);
	}
}
